@@ -19,10 +19,6 @@ AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 AC_REVISION($LAAS$)
 
-if test $host_os = darwin; then
-	AC_DEFINE(__DARWIN__)
-fi
-
 AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
 
